fix(facets): LGCY-25 not cutoff anymore (#155)

--- a/app/scripts/components/facets/styles/facets.less
+++ b/app/scripts/components/facets/styles/facets.less
@@ -14,6 +14,7 @@
   label {
     margin: 0;
   }
+
 }
 
 .current-filters {
@@ -105,6 +106,10 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+
+  label {
+    display: inline;
+  }
 }
 
 .list-group-item-text {
